--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,46 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+<style>
+h1 {
+    color: black;
+    text-align: left;
+}
+p {
+    color: black;
+    text-align: left;
+}
+.jumbotron {
+    margin-bottom: 0px;
+    background-image: url(/static/home.png);
+    background-position: 0% 25%;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+</style>
+<div class="jumbotron">
+  <h1>Title</h1>      
+  <p> * Mission Statement:</p>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <div class="dropdown">
+    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Find the college for you!
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">California State University, Monterey Bay</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">San Jose State University</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">San Diego State University</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">California Polytechnic State University</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">University of California, Santa Barbara</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">University of California, Davis</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">California State University, Long Beach</a></li>
+</div>
+<br><br><br><br><br><br><br>
+</html>
