Changed .py file

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@ p {
     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Find the college for you!
     <span class="caret"></span></button>
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">California State University, Monterey Bay</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" href="/college">California State University, Monterey Bay</a></li>
       <li role="presentation"><a role="menuitem" tabindex="-1" href="#">San Jose State University</a></li>
       <li role="presentation"><a role="menuitem" tabindex="-1" href="#">San Diego State University</a></li>
       <li role="presentation"><a role="menuitem" tabindex="-1" href="#">California Polytechnic State University</a></li>
