--- a/templates/CSUMontereyBay.html
+++ b/templates/CSUMontereyBay.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <style>
+body {
+    text-align: center;
+}
 h1 {
     color: black;
     text-align: left;
@@ -23,6 +26,7 @@ p {
     background-position: 0% 25%;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 </style>
