--- a/templates/home.html
+++ b/templates/home.html
@@ -23,6 +23,7 @@ p {
     background-position: 0% 25%;
     background-size: cover;
     background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 </style>
