--- a/templates/college_comments.html
+++ b/templates/college_comments.html
@@ -22,7 +22,7 @@ p {
 }
 .jumbotron {
     margin-bottom: 0px;
-    background-image: url(/static/CSUMontereyBay.png);
+    background-image: url(/static/home.png);
     background-position: 0% 25%;
     background-size: cover;
     background-attachment: fixed;
@@ -31,12 +31,12 @@ p {
 
 </style>
 <div class="jumbotron">
-    <img src='static/campus_pics/CSUMontereyBay.png' style="width:400px;height:250px;">
+    <img src='static/campus_pics/Monterey.png' style="width:400px;height:250px;">
   <h1>{{parameters.college}}</h1>      
   <p> Statistics:</p>
   <p>Student Stories:</p>
-  <img class='img-circle' src={{parameters.image}} height="100px" width="100px"><p>{{parameters.name}}</p>
-  <p>{{parameters.comment}}</p>
+  <img class='img-circle' src="static/people/matt.jpg" height="100px" width="100px"><p>{{parameters.3.name}}</p>
+  <p>{{parameters.3.comment}}</p>
   
 
   
