--- a/templates/college.html
+++ b/templates/college.html
@@ -22,7 +22,7 @@ p {
 }
 .jumbotron {
     margin-bottom: 0px;
-    background-image: url(static/home.png);
+    background-image: url("static/home.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
