--- a/templates/college.html
+++ b/templates/college.html
@@ -32,7 +32,17 @@ p {
 <img src={{params.image}} style="width:50%;height:40%;">
   <h1>{{params.college}}</h1>      
   <p> Statistics:</p>
-  Student Stories:
+  <p>Student Stories:</p>
+  <br>
+  <img class='img-circle' src="static/people/matt.jpg" height="100px" width="100px"><p>{{params.1.name}}</p>
+  <p>{{params.1.comment}}</p>
+  <br>
+    <img class='img-circle' src="static/people/matt.jpg" height="100px" width="100px"><p>{{params.2.name}}</p>
+  <p>{{params.2.comment}}</p>
+  <br>
+    <img class='img-circle' src="static/people/matt.jpg" height="100px" width="100px"><p>{{params.3.name}}</p>
+  <p>{{params.3.comment}}</p>
+  <br>
   <p><a href="/comment">Share your experience!</a></p>
   
 </div>
