--- a/templates/home.html
+++ b/templates/home.html
@@ -34,34 +34,18 @@ p {
 <div class="jumbotron">
   <h1>Title</h1>      
   <p> * Mission Statement:</p>
-<<<<<<< HEAD
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-  <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Find the college for you!
-    <span class="caret"></span></button>
-    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="/college">California State University, Monterey Bay</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">San Jose State University</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">San Diego State University</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">California Polytechnic State University</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">University of California, Santa Barbara</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">University of California, Davis</a></li>
-      <li role="presentation"><a role="menuitem" tabindex="-1" href="#">California State University, Long Beach</a></li>
-</div>
-=======
   <br><br><br>
   <form action='/' method="post" >
-    <select style="width:30%;align:center;" name='college'>
+     <select style="width:30%;align:center;" name='college'>
       <option value="CSU Monterey Bay">California State University, Monterey Bay</option>
+      <option value="CSU Long Beach">California State University, Long Beach</option>
       <option value="San Jose State">San Jose State University</option>
       <option value="San Diego State">San Diego State University</option>
-      <option value="CalPoly">California Polytechnic State University, Ponoma</option>
       <option value="UC Berkeley">University of California, Berkeley</option>
       <option value="UC Davis">University of California, Davis</option>
-      <option value="CSU Long Beach">California State University, Long Beach</option>
+      <option value="UC Irvine">University of California, Irvine</option>
     </select>
     <input type="submit" value="Submit">
   </form>
->>>>>>> 3805d5e49bf8b4ba914a2aa1591b0aeef68fcda6
 <br><br><br><br><br><br><br>
 </html>
