--- a/templates/college.html
+++ b/templates/college.html
@@ -25,17 +25,28 @@ p {
     background-image: url(static/home.png);
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: fixed;
 }
-
 </style>
 <div class="jumbotron">
 <img src={{params.image}} style="width:50%;height:40%;">
   <h1>{{params.college}}</h1>      
   <p> Statistics:</p>
-  Student Stories:
+  <p>Student Stories:</p>
+  <br>
+  <img class='img-circle' src="static/people/matt.jpg" height="100px" width="100px"><p>{{params.1.name}}</p>
+  <p>{{params.1.comment}}</p>
+  <br>
+    <img class='img-circle' src="static/people/matt.jpg" height="100px" width="100px"><p>{{params.2.name}}</p>
+  <p>{{params.2.comment}}</p>
+  <br>
+    <img class='img-circle' src="static/people/matt.jpg" height="100px" width="100px"><p>{{params.3.name}}</p>
+  <p>{{params.3.comment}}</p>
+  <br>
   <p><a href="/comment">Share your experience!</a></p>
   
 </div>
 </body>
 </html>
+
+
+In state tuition, out state tuition, total accepted, acceptance rate, student - faculty rate
