--- a/templates/college_comments.html
+++ b/templates/college_comments.html
@@ -22,25 +22,31 @@ p {
 }
 .jumbotron {
     margin-bottom: 0px;
-    background-image: url(/static/CSUMontereyBay.png);
+    background-image: url(/static/home.png);
     background-position: 0% 25%;
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
-
+div {
+    height: 350px;
+    width: 250px;
+    overflow: auto;
+    padding: 20px 30px;
+    margin: auto;
+    margin-top: 5%;
+    background-image: url("http://celestial6.com/stuff/fades/hover.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 </style>
 <div class="jumbotron">
     <img src='static/campus_pics/CSUMontereyBay.png' style="width:400px;height:250px;">
-  <h1>{{parameters.college}}</h1>      
+  <h1>{{params.college}}</h1>      
   <p> Statistics:</p>
   <p>Student Stories:</p>
-  <img class='img-circle' src={{parameters.image}} height="100px" width="100px"><p>{{parameters.name}}</p>
-  <p>{{parameters.comment}}</p>
-  
-
-  
-  
+  <img class='img-circle' src={{params.image}} height="100px" width="100px"><p>{{params.name}}</p>
+  <p>{{params.comment}}</p>
 </div>
 </body>
 </html>
